# fp-rfid-reader-service

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  LINTING.md  Makefile  README.md  config.json  docker-compose.yml  generate_grpc.sh  main.py  main_simulator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  tests.yml
proto/: audio_service.proto
src/: audio_client.py  rfid_service.py
src/gpio/: gpio_controller.py
src/grpc/: audio_client.py
src/grpc/grpc_generated/: audio_service_pb2.py  audio_service_pb2_grpc.py
src/lcd/: base.py  lcd_service.py
src/lcd/implementations/: charlcd_writer.py
src/led/: led_service.py
src/mqtt/: recording_control_handler.py
src/reader/: base.py  reader_service.py
src/reader/implementations/: mfrc522_reader.py
tests/: conftest.py  test_audio_client.py
tests/gpio/: test_gpio_controller.py
tests/integration/: test_application_flow.py  test_audio_client_integration.py  test_rfid_reader_lcd.py
tests/lcd/: test_lcd_service.py
tests/lcd/implementations/: test_charlcd_writer.py
tests/reader/: test_reader.py  test_reader_service.py
tests/reader/implementations/: test_mfrc522_reader.py
